# wax

./: Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml
src/: any.rs  capture.rs  diagnostics.rs  encode.rs  filter.rs  fragment.rs  hir.rs  lib.rs  query.rs  rule.rs  span.rs  token.rs  walk.rs
src/diagnostics/: inspect.rs  miette.rs  mod.rs  report.rs
src/token/: mod.rs  parse.rs  variance.rs  walk.rs
src/token/variance/: bound.rs  mod.rs  natural.rs  ops.rs
src/token/variance/invariant/: mod.rs  natural.rs  term.rs  text.rs
src/walk/: behavior.rs  filter.rs  glob.rs  mod.rs
tests/: parse.rs  walk.rs
