[package]
name = "wax"
version = "0.1.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Opinionated and portable globs that can be matched against paths and directory trees."
repository = "https://github.com/olson-sean-k/wax"
readme = "README.md"
edition = "2018"
license = "MIT"
keywords = [
    "glob",
    "pattern",
    "regex"
]
categories = [
    "filesystem"
]

[features]
default = []
diagnostics = ["miette"]

[dependencies]
bstr = "^0.2.0"
const_format = "^0.2.0"
itertools = "^0.10.0"
nom = "^7.0.0"
smallvec = "^1.5.0"
thiserror = "^1.0.0"
walkdir = "^2.3.0"

[dependencies.miette]
version = "^3.0.0"
default-features = false
optional = true

[dependencies.regex]
version = "^1.5.0"
default-features = false
features = [
    "perf",
    "std",
    "unicode-case"
]

[dev-dependencies]
build-fs-tree = "^0.3.0"
tempfile = "^3.2.0"
