[package]
name = "wax"
version = "0.4.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Opinionated and portable globs that can be matched against paths and directory trees."
repository = "https://github.com/olson-sean-k/wax"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"
license = "MIT"
keywords = [
    "glob",
    "pattern",
    "regex"
]
categories = ["filesystem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs"
]

[features]
default = []
# Enables all diagnostics features. See below.
diagnostics = [
    "diagnostics-inspect",
    "diagnostics-report"
]
# Exposes glob metadata through inspection APIs.
diagnostics-inspect = []
# Integrates with `miette` and provides `Diagnostic` error types and reporting.
diagnostics-report = [
    "miette",
    "vec1"
]

[dependencies]
bstr = "^0.2.0"
const_format = "^0.2.0"
itertools = "^0.10.0"
nom = "^7.0.0"
nom-supreme = "^0.6.0"
pori = "=0.0.0"
smallvec = "^1.5.0"
thiserror = "^1.0.0"
walkdir = "^2.3.0"

[dependencies.miette]
version = "^3.0.0"
default-features = false
optional = true

[dependencies.regex]
version = "^1.5.0"
default-features = false
features = [
    "perf",
    "std",
    "unicode-case"
]

[dependencies.vec1]
version = "^1.8.0"
default-features = false
optional = true

[dev-dependencies]
build-fs-tree = "^0.3.0"
dunce = "^1.0.0"
tempfile = "^3.2.0"
