[package]
name = "wax"
version = "0.6.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Opinionated and portable globs that can be matched against paths and directory trees."
repository = "https://github.com/olson-sean-k/wax"
readme = "README.md"
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
keywords = [
    "glob",
    "pattern",
    "regex"
]
categories = ["filesystem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs"
]

[features]
default = ["walk"]
# Integrates with `miette` and provides `Diagnostic` error types and reporting.
miette = [
    "dep:miette",
    "dep:tardar",
]
# Provides APIs for matching globs against directory trees.
walk = ["dep:walkdir"]

[dependencies]
itertools = "^0.11.0"
nom = "^7.0.0"
pori = "=0.0.0"
thiserror = "^1.0.0"

[dependencies.miette]
version = "^5.10.0"
default-features = false
optional = true

[dependencies.regex-automata]
version = "^0.4.6"
default-features = false
features = [
    "meta",
    "perf",
    "std",
    "unicode-case"
]

[dependencies.regex-syntax]
version = "^0.8.3"
default-features = false

[dependencies.tardar]
version = "^0.1.0"
optional = true

[dependencies.walkdir]
version = "^2.4.0"
optional = true

[dev-dependencies]
build-fs-tree = "^0.6.0"
dunce = "^1.0.0"
expect_macro = "^0.2.0"
rstest = "^0.18.0"
tempfile = "^3.8.0"
